# aqualens

./: .gitignore  DS_Store  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: quickstart.ipynb
src/: config.py  preprocessing.py  report.py
src/aqualens/: __init__.py  acquisition.py  classify.py  cli.py  pipeline.py  temporal.py
tests/: conftest.py  test_classify.py  test_coastal.py  test_config.py  test_pipeline.py  test_temporal.py
