[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aqualens"
version = "0.2.2"
description = "Automated water-body drawdown monitoring from Sentinel-2 imagery"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "James Byrne" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "rasterio>=1.3",
    "matplotlib>=3.7",
    "openeo>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
aqualens = "aqualens.cli:main"

[project.urls]
Repository = "https://github.com/jxbyr/aqualens"

[tool.setuptools.packages.find]
where = ["src"]
